# llama.cpp

docs/: build.md
docs/backends/: npx.md
ggml/: CMakeLists.txt
ggml/include/: ggml-npx.h
ggml/src/: CMakeLists.txt  ggml-backend-reg.cpp
ggml/src/ggml-npx/: CMakeLists.txt  ggml-npx.cpp
